tests/pos/todo/reals/reals-02.ts

/*@ option REALS */

let a = 10;

let b = 20;

assert(a * a + b * b > 499);
