tests/neg/reals/reals-01.ts

/*@ option --real */

let a = 10;

let b = 19;

assert(a * a + b * b > 499);
